--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
   "main": "./dist/index.js",
   "scripts": {
     "start": "npm run build && npm run run",
-    "ts" : "ts-node ./src/index.ts",
+    "ts": "ts-node ./src/index.ts",
     "build": "tsc --build --pretty",
-    "run": "node ."
+    "run": "node .",
+    "cli" : "ts-node ./src/cli.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.1.7",
+    "@types/winston": "^2.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "node-html-parser": "^6.1.5"
+    "node-html-parser": "^6.1.5",
+    "winston": "^3.8.2"
   }
 }
